Changes to support android 2.2 and refactors

--- a/src/stylesheets/__init.styl
+++ b/src/stylesheets/__init.styl
@@ -9,7 +9,8 @@ ASIDE_SMALL_ICON       = 48px
 
 DEFAULT_TRANSITION     = easeOutSine
 DEFAULT_TRANSITION     = easeInCubic
-TRANSITION_TIME        = 1000ms
+DEFAULT_TRANSITION     = ease
+TRANSITION_TIME        = 800ms
 
 FONT_SIZE_TINY         = 11px
 FONT_SIZE_SMALL        = 0.9em
