--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -82,25 +82,25 @@ body
   /* ========================================================================= */
   /* ================================ SECTION ================================ */
   /* ========================================================================= */
-  & > section
-    z-index: 2
-    width: inherit
-    &:not(.show)
-      z-index: 1
+  // & > section
+  //   z-index: 2
+  //   width: inherit
+  //   &:not(.show)
+  //     z-index: 1
 
   /* ========================================================================= */
   /* ================================= ASIDE ================================= */
   /* ========================================================================= */
-  & > aside
-    width: ASIDE_WIDTH
-    display: none
-    z-index: -1
-    &.active, &.show
-      display-box()
-    &.show
-      z-index: 0
-    &.right
-      right: 0px
+  // & > aside
+  //   width: ASIDE_WIDTH
+  //   display: none
+  //   z-index: -1
+  //   &.active, &.show
+  //     display-box()
+  //   &.show
+  //     z-index: 0
+  //   &.right
+  //     right: 0px
 
   /* ========================================================================= */
   /* =============================== EXCLUDE OS ============================== */
