--- a/src/stylesheets/lungo.animation.fade.styl
+++ b/src/stylesheets/lungo.animation.fade.styl
@@ -1,31 +1,30 @@
 @import "__init.styl"
 
 .fadeIn
-  vendor(animation, fadeIn TRANSITION_TIME ease both)
+  vendor(animation-name, fadeIn)
+  vendor(animation-duration, TRANSITION_TIME)
+  vendor(animation-timing-function, DEFAULT_TRANSITION)
 .fadeOut
-  vendor(animation, fadeOut TRANSITION_TIME ease both)
+  vendor(animation-name, fadeOut)
+  vendor(animation-duration, TRANSITION_TIME)
+  vendor(animation-timing-function, DEFAULT_TRANSITION)
 .fadeInBack
-  vendor(animation, fadeInBack TRANSITION_TIME ease both)
+  vendor(animation-name, fadeInBack)
+  vendor(animation-duration, TRANSITION_TIME)
+  vendor(animation-timing-function, DEFAULT_TRANSITION)
 .fadeOutBack
-  vendor(animation, fadeOutBack TRANSITION_TIME ease both)
-
+  vendor(animation-name, fadeOutBack)
+  vendor(animation-duration, TRANSITION_TIME)
+  vendor(animation-timing-function, DEFAULT_TRANSITION)
 
 @keyframes fadeIn
-  from {
-    opacity: 0
-  }
+  from { opacity: 0 }
 
 @keyframes fadeOut
-  to {
-    opacity: 1
-  }
+  to { opacity: 1 }
 
 @keyframes fadeInBack
-  from {
-    opacity: 0
-  }
+  from { opacity: 0 }
 
 @keyframes fadeOutBack
-  to {
-    opacity: 0
-  }
+  to { opacity: 0 }
