--- a/src/stylesheets/lungo.media.phone.styl
+++ b/src/stylesheets/lungo.media.phone.styl
@@ -1,82 +1,115 @@
+@import "__init.styl"
 
 /* ==== Any phone ==== */
 @media only screen and (max-width: 767px)
-  body
-    &[data-position="absolute"] > section
-      position: absolute
-    &[data-position="fixed"] > section
-      position: fixed
 
-    & > aside
-      position: absolute
+  body
+    vendor(perspective, 800px)
+    vendor(transform-style, preserve-3d)
+    overflow: hidden
 
     & > section
-      display: none
-      &:not([data-transition]).show
-        display: block
+      // overflow: hidden
+      display-box()
+      vendor(transform, translate3d(0, 0, 0))
+      vendor(backface-visibility, hidden)
+      position: absolute
+      width: 100%
+      height: 100%
+      top: 0
+      left: 0
+      z-index: 2
+      visibility: hidden
+      &.show
+        visibility: visible
 
-      // &.show.aside
-      //   &:not(.right)
-      //     transform translateX(ASIDE_WIDTH)
-      //   &.right
-      //     transform translateX(-(ASIDE_WIDTH))
-      // &.show.hide
-      //   z-index: -1
+    & > aside
+      width: ASIDE_WIDTH
+      position: absolute
+      z-index: -1
+      top: 0
+      left: 0
+      visibility: hidden
+      &.show
+        visibility: visible
 
-      // &[data-transition]
-      //   display-box()
-      //   transition-property opacity, z-index, transform,        scale, opacity
-      //   transition-duration TRANSITION_TIME
-      //   transition-timing-function DEFAULT_TRANSITION
-      //   backface-visibility hidden
 
-      // // Transition: SLIDE
-      // &[data-transition="slide"]
-      //   visibility: visible
-      //   z-index: 2
-      //   &.show, &:first-child
-      //     transform translateX(0%)
-      //     z-index: 1
-      //   &:not(first-child)
-      //     transform translateX(100%)
-      //   &.hide
-      //     transform scale(0.9)
-      //     z-index: -1
-      //     &:not(.last)
-      //       opacity: 0
-      //       transition none !important
-      //     &.last
-      //       opacity: 0.5 !important
+  // body
+  //   &[data-position="absolute"] > section
+  //     position: absolute
+  //   &[data-position="fixed"] > section
+  //     position: fixed
 
-      // // Transition: COVER
-      // &[data-transition="cover"]
-      //   transform translateY(100%)
-      //   &.show, &.hide
-      //     transform translateY(0%)
-      //   &.hide
-      //     transform scale(0.9)
-      //     z-index: -1
-      //     &:not(.last)
-      //       opacity: 0
-      //       visibility: hidden
-      //     &.last
-      //       opacity: 0.2
+  //   & > aside
+  //     position: absolute
 
-      // // Transition: POP
-      // &[data-transition="pop"]
-      //   opacity: 0
-      //   transform scale(1.15)
-      //   &.show
-      //     transform scale(1)
-      //     opacity: 1
-      //   &.hide
-      //     transform scale(0.9)
-      //     opacity: 0
+  //   & > section
+  //     display: none
+  //     &:not([data-transition]).show
+  //       display: block
 
-      // // Transition: FADE
-      // &[data-transition="fade"]
-      //   opacity: 0
-      //   &:first-child, &.show
-      //     opacity: 1
-      //   &:hide
-      //     opacity: 0
+  //     &.show.aside
+  //       &:not(.right)
+  //         transform translateX(ASIDE_WIDTH)
+  //       &.right
+  //         transform translateX(-(ASIDE_WIDTH))
+  //     &.show.hide
+  //       z-index: -1
+
+  //     &[data-transition]
+  //       display-box()
+  //       transition-property opacity, z-index, transform,        scale, opacity
+  //       transition-duration TRANSITION_TIME
+  //       transition-timing-function DEFAULT_TRANSITION
+  //       backface-visibility hidden
+
+  //     // Transition: SLIDE
+  //     &[data-transition="slide"]
+  //       visibility: visible
+  //       z-index: 2
+  //       &.show, &:first-child
+  //         transform translateX(0%)
+  //         z-index: 1
+  //       &:not(first-child)
+  //         transform translateX(100%)
+  //       &.hide
+  //         transform scale(0.9)
+  //         z-index: -1
+  //         &:not(.last)
+  //           opacity: 0
+  //           transition none !important
+  //         &.last
+  //           opacity: 0.5 !important
+
+  //     // Transition: COVER
+  //     &[data-transition="cover"]
+  //       transform translateY(100%)
+  //       &.show, &.hide
+  //         transform translateY(0%)
+  //       &.hide
+  //         transform scale(0.9)
+  //         z-index: -1
+  //         &:not(.last)
+  //           opacity: 0
+  //           visibility: hidden
+  //         &.last
+  //           opacity: 0.2
+
+  //     // Transition: POP
+  //     &[data-transition="pop"]
+  //       opacity: 0
+  //       transform scale(1.15)
+  //       &.show
+  //         transform scale(1)
+  //         opacity: 1
+  //       &.hide
+  //         transform scale(0.9)
+  //         opacity: 0
+
+  //     // Transition: FADE
+  //     &[data-transition="fade"]
+  //       opacity: 0
+  //       &:first-child, &.show
+  //         opacity: 1
+  //       &:hide
+  //         opacity: 0
