--- a/src/stylesheets/lungo.animation.cover.styl
+++ b/src/stylesheets/lungo.animation.cover.styl
@@ -4,24 +4,16 @@ TRANSLATE_Y = -18%
 TRANSLATE_Z = -150px
 ROTATE_X    = 20deg
 
-.coverIn
-  vendor(animation-name, coverIn)
-  vendor(animation-duration, TRANSITION_TIME)
-  vendor(animation-timing-function, DEFAULT_TRANSITION)
-.coverOut
-  vendor(animation-name, coverOut)
-  vendor(animation-duration, TRANSITION_TIME)
-  vendor(animation-timing-function, DEFAULT_TRANSITION)
-  z-index: -1
-.coverInBack
-  vendor(animation-name, coverInBack)
-  vendor(animation-duration, TRANSITION_TIME)
-  vendor(animation-timing-function, DEFAULT_TRANSITION)
-  z-index: -1
-.coverOutBack
-  vendor(animation-name, coverOutBack)
-  vendor(animation-duration, TRANSITION_TIME)
-  vendor(animation-timing-function, DEFAULT_TRANSITION)
+[data-transition="cover"]
+  &[data-direction="in"]
+    vendor(animation-name, coverIn)
+  &[data-direction="out"]
+    vendor(animation-name, coverOut)
+  &[data-direction="back-in"]
+    vendor(animation-name, coverInBack)
+  &[data-direction="back-out"]
+    vendor(animation-name, coverOutBack)
+
 
 @keyframes coverIn
   from { transform: translateY(110%) }
