--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -49,7 +49,7 @@ body
         z-index: -1
         margin: 0 4px
         float: left
-        font-size: FONT_SIZE_LARGE
+        // font-size: FONT_SIZE_LARGE
         box-flex(1)
 
         &.centered
