--- a/src/stylesheets/theme/theme.base.styl
+++ b/src/stylesheets/theme/theme.base.styl
@@ -12,11 +12,8 @@
 body
   background-color: #000
   color: COLOR
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+  font: 14px/1.25 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-weight: 400
-  font-size: 13px
-  line-height: 1.3em
-  letter-spacing: -0.05em
 
   & .text
     &.thin
