--- a/src/stylesheets/theme/theme.layout.nav.styl
+++ b/src/stylesheets/theme/theme.layout.nav.styl
@@ -17,6 +17,8 @@ nav
 
   section > footer > & > a, &[data-control=groupbar] > a
     color: NAV_LINK
+    & abbr
+      font-weight: 700 !important
     &.active
       color: NAV_LINK_ACTIVE
 
