--- a/src/stylesheets/__init.styl
+++ b/src/stylesheets/__init.styl
@@ -1,29 +1,29 @@
 @import "CSSmethods/vendor.styl"
 
 /* CONSTANTS */
-HEADER_HEIGHT          = 45px
+HEADER_HEIGHT           = 45px
 
-ASIDE_WIDTH            = 264px
-ASIDE_WIDTH_SMALL      = 64px
-ASIDE_SMALL_ICON       = 48px
+ASIDE_WIDTH             = 264px
+ASIDE_WIDTH_SMALL       = 64px
+ASIDE_SMALL_ICON        = 48px
 
-DEFAULT_TRANSITION     = easeOutSine
-DEFAULT_TRANSITION     = easeInCubic
-TRANSITION_TIME        = 400ms
+DEFAULT_TRANSITION      = easeOutSine
+DEFAULT_TRANSITION      = easeInCubic
+TRANSITION_TIME         = 400ms
 
-FONT_SIZE_TINY         = 11px
-FONT_SIZE_SMALL        = 0.9em
-FONT_size_normal       = 1.0em
-FONT_SIZE_BIG          = 1.2em
-FONT_SIZE_LARGE        = 1.4em
+FONT_SIZE_TINY          = 11px
+FONT_SIZE_SMALL         = 0.9em
+FONT_SIZE_NORMAL        = 1.0em
+FONT_SIZE_BIG           = 1.2em
+FONT_SIZE_LARGE         = 1.4em
 
+LIST_IMAGE              = 44px
+LIST_BIG_IMAGE          = 64px
+LIST_SMALL_IMAGE        = 24px
 
-LIST_PADDING           = 14px
-LIST_PADDING_HORIZONTAL= (LIST_PADDING / 1.25)
+INDENT                  = 0.8em
 
-INDENT                 = 3%
-
-FORM_HEIGHT = 30px
-FORM_border          = 2px
-FORM_border_height   = FORM_HEIGHT + (FORM_border * 4)
-FORM_PROGRESS_HEIGHT = 12px
+FORM_HEIGHT             = 30px
+FORM_border             = 2px
+FORM_border_height      = FORM_HEIGHT + (FORM_border * 4)
+FORM_PROGRESS_HEIGHT    = 12px
