--- a/src/stylesheets/lungo.base.styl
+++ b/src/stylesheets/lungo.base.styl
@@ -91,11 +91,11 @@ audio:not([controls]) display: none
 [hidden]  display: none
 
 html
+  width: 100%
   height: 100%
   font-size: 100%
   -webkit-text-size-adjust: 100%
   -ms-text-size-adjust: 100%
-
 
 body
   margin: 0
@@ -112,8 +112,8 @@ body
   // -webkit-box-align: stretch
   // -webkit-tap-highlight-color: rgba(0,0,0,0)
 
-  // display-box()
   */
+  display-box()
 
   & *
     box-sizing(border-box)
@@ -129,16 +129,17 @@ a
     opacity: 1
 
 img
-    border: 0
-    -ms-interpolation-mode: bicubic
-    vertical-align: middle
-    font-size: 0
+  border: 0
+  -ms-interpolation-mode: bicubic
+  vertical-align: middle
+  font-size: 0
 
+strong
+  font-weight: 600
 
 table
-    border-collapse: collapse
-    border-spacing: 0
-
+  border-collapse: collapse
+  border-spacing: 0
 
 th, td, caption
   vertical-align: top
