--- a/src/stylesheets/lungo.media.phone.styl
+++ b/src/stylesheets/lungo.media.phone.styl
@@ -1,5 +1,11 @@
 
 /* ==== Any phone ==== */
+
+// media="all"
+//   ::-webkit-scrollbar
+//     width: 1px
+//     height: 1px
+
 @media only screen and (max-width: 767px)
   body
     &[data-position="absolute"] > section
