--- a/src/stylesheets/theme/theme.widget.styl
+++ b/src/stylesheets/theme/theme.widget.styl
@@ -19,14 +19,6 @@
   footer &
     box-shadow inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)
 
-/* ===============================  MESSAGE  =============================== */
-body > section > article > .empty
-  & > .icon, > strong, > small
-    text-shadow: 0 1px 0 lighten(BACKGROUND, 95%)
-  & > .icon, > small
-    color: darken(BACKGROUND, 20%)
-  & > strong
-    color: darken(BACKGROUND, 40%)
 
 /* =================================  PULL  =============================== */
 body > section > [data-control="pull"]
@@ -38,3 +30,12 @@ body > section > [data-control="pull"]
   &.rotate
     color: darken(BACKGROUND, 75%)
 
+
+/* ===============================  EMPTY  =============================== */
+body > section > article > .empty
+  & > .icon, > strong, > small
+    text-shadow: 0 1px 0 lighten(BACKGROUND, 95%)
+  & > .icon, > small
+    color: darken(BACKGROUND, 20%)
+  & > strong
+    color: darken(BACKGROUND, 40%)
