Fixing PX to EM

--- a/src/stylesheets/__init.styl
+++ b/src/stylesheets/__init.styl
@@ -2,6 +2,7 @@
 
 /* CONSTANTS */
 HEADER_HEIGHT           = 45px
+HEADER_GROUPBAR_HEIGHT  = 32px
 
 ASIDE_WIDTH             = 264px
 ASIDE_WIDTH_SMALL       = 64px
