--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -100,7 +100,7 @@ body
     &.show
       z-index: 0
     &.right
-      right: 0px
+      right:0
 
   /* ========================================================================= */
   /* =============================== EXCLUDE OS ============================== */
