--- a/src/stylesheets/lungo.widget.form.styl
+++ b/src/stylesheets/lungo.widget.form.styl
@@ -23,14 +23,14 @@ form, .form
   & input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], select, textarea, label.select
     display: block
     width: 100%
-    padding: 0px 6px
+    padding:0 6px
     height: FORM_HEIGHT
     transition all 0.15s linear
     font-family: inherit
     -webkit-appearance: none
     -webkit-user-select: text
     -webkit-font-smoothing: antialiased
-    border: 0px
+    border:0
     &:focus
       outline: none !important
     &.border
@@ -62,7 +62,7 @@ form, .form
     & input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea
       box-shadow none
       border: none
-      padding: 0px
+      padding:0
       &, &:focus
         background: none
 
@@ -77,7 +77,7 @@ form, .form
     display: inline-block
     font-size: inherit
     line-height: inherit
-    padding-left: 0px
+    padding-left:0
 
     &.border
       H = FORM_border_height - (FORM_border * 2)
@@ -107,7 +107,7 @@ form, .form
 
     height: FORM_PROGRESS_HEIGHT
     width: 100%
-    padding: 0px
+    padding:0
     border: none
 
     &::-webkit-slider-thumb
