--- a/src/stylesheets/lungo.widget.notification.styl
+++ b/src/stylesheets/lungo.widget.notification.styl
@@ -54,8 +54,8 @@ WINDOW_WIDTH = 280px
         height: LOADING !important
 
       & > .icon
-        left: 0px
-        top: 0px
+        left:0
+        top:0
         font-size: 52px
         line-height: LOADING
       & > strong
@@ -104,7 +104,7 @@ WINDOW_WIDTH = 280px
       transition-property opacity, top
       top: -(H)
       &.show
-        top: 0px
+        top:0
       & .icon
         font-size: FONT_SIZE_LARGE
         float: left
