--- a/src/stylesheets/theme/theme.layout.list.styl
+++ b/src/stylesheets/theme/theme.layout.list.styl
@@ -13,13 +13,13 @@
     &:not(.anchor)
       border-bottom: inset 1px LIST_border
     &.color
-      box-shadow: inset 4px 0px 0px COLOR
+      box-shadow: inset 4px00 COLOR
     &.accept
-      box-shadow: inset 4px 0px 0px SUCCESS
+      box-shadow: inset 4px00 SUCCESS
     &.cancel
-      box-shadow: inset 4px 0px 0px DANGER
+      box-shadow: inset 4px00 DANGER
     &.warning
-      box-shadow: inset 4px 0px 0px WARNING
+      box-shadow: inset 4px00 WARNING
     &.arrow::after
       border-color: lighten(COLOR, 75%)
 
