--- a/src/stylesheets/theme/theme.widget.form.styl
+++ b/src/stylesheets/theme/theme.widget.form.styl
@@ -83,7 +83,7 @@ form, .form
     color: darken(FORM_color, 25%)
     font-weight: 700
     border-radius: (FORM_border_radius * 4)
-    // box-shadow: inset 0px 1px 2px rgba(0,0,0,0.25), 0px 1px 0px rgba(255,255,255,0.25)
+    // box-shadow: inset0 1px 2px rgba(0,0,0,0.25),0 1px0 rgba(255,255,255,0.25)
     & label
       border-radius: (FORM_border_radius * 4)
       background: darken(FORM_color, 25%)
