--- a/src/stylesheets/theme/theme.widget.notification.styl
+++ b/src/stylesheets/theme/theme.widget.notification.styl
@@ -41,10 +41,10 @@
       & .title
         background: THEME
         color: #fff
-        border-radius FORM_border_radius FORM_border_radius 0px 0px
+        border-radius FORM_border_radius FORM_border_radius00
     &.push
       background: rgba(0,0,0,0.75)
 
     & button, & .button
       &:last-child
-        border-radius 0px 0px FORM_border_radius FORM_border_radius
+        border-radius00 FORM_border_radius FORM_border_radius
