--- a/src/stylesheets/lungo.media.tablet.styl
+++ b/src/stylesheets/lungo.media.tablet.styl
@@ -12,7 +12,7 @@
       margin-right: -(ASIDE_WIDTH)
       &.show
         transform translateX(0px)
-        margin-right: 0px
+        margin-right:0
       &.hide
         transform translateX(-100%)
         margin-right: -(ASIDE_WIDTH) !important
