--- a/src/stylesheets/lungo.widget.styl
+++ b/src/stylesheets/lungo.widget.styl
@@ -135,6 +135,6 @@ body > section > article.splash
     position: absolute
     width: 100%
     bottom: 8px
-    left: 0px
+    left:0
     font-size: FONT_SIZE_TINY
-    padding: 0px
+    padding:0
