--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -47,17 +47,22 @@ body
 
       & > .title
         z-index: -1
-        margin: 0 4px
+        margin: 0 0.25em
         float: left
-        // font-size: FONT_SIZE_LARGE
+        font-size: FONT_SIZE_BIG
         box-flex(1)
 
         &.centered
           position: absolute
-          left: 32px
-          right: 32px
+          left: 2em
+          right: 2em
           text-align: center
           display: inline-block
+
+        & > .tag
+          position: relative
+          top: -0.1em
+          left: 0.25em
 
       & > img.title
         PAD = 18px
