--- a/src/stylesheets/lungo.widget.empty.styl
+++ b/src/stylesheets/lungo.widget.empty.styl
@@ -7,8 +7,8 @@ body > section > article > .empty
   & > *
     display: block
   & > .icon
-    font-size: S = 120px
-    line-height: S
+    font-size: S = 7.5em
+    line-height: 1em
   & > strong
     font-size: FONT_SIZE_BIG
     line-height: FONT_SIZE_BIG
