--- a/src/stylesheets/theme/__init.styl
+++ b/src/stylesheets/theme/__init.styl
@@ -21,3 +21,5 @@ BORDER_radius       = 2px
 FORM_color          = darken(#e5e5e5, 5%)
 FORM_border         = 2px
 FORM_border_radius  = (BORDER_radius * FORM_border)
+/* -------------------------- BUTTON -------------------------- */
+BUTTON_HEIGHT       = 34px
