--- a/src/stylesheets/lungo.base.styl
+++ b/src/stylesheets/lungo.base.styl
@@ -144,3 +144,8 @@ table
 th, td, caption
   vertical-align: top
   text-align: left
+
+@media="all"
+  ::-webkit-scrollbar
+    width: 1px
+    height: 1px
