--- a/src/stylesheets/lungo.widget.button.styl
+++ b/src/stylesheets/lungo.widget.button.styl
@@ -20,12 +20,14 @@
 
   header &
     padding: 0 0.5em
-    height: HEIGHT = 34px
-    min-width: HEIGHT
+    height: BUTTON_HEIGHT
+    min-width: BUTTON_HEIGHT
     font-size: 1.0em
-    line-height: HEIGHT
+    line-height: BUTTON_HEIGHT
     & > .icon
       font-size: 1.4em
+    & > abbr
+      font-size: FONT_SIZE_SMALL
     & .icon + abbr
       position: relative
       left: 0.2em
