--- a/src/stylesheets/theme/theme.widget.styl
+++ b/src/stylesheets/theme/theme.widget.styl
@@ -11,20 +11,21 @@
 .tag:not(.icon)
   color: #fff
   border-radius BORDER_radius
-  font-weight: 700 !important
+  font-weight: 700
   &.count
-    background-color: THEME
-  header .count
-    background-color: THEME-dark !important
-  footer &
-    box-shadow inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)
+    background-color: DANGER
+    box-shadow inset 0 0.1em 0.1em rgba(255,255,255,0.3), 0 0.1em 0.2em rgba(0,0,0,0.5)
+    footer a.active &, [data-control="groupbar"] a.active &
+      background-color: DANGER
+    footer a:not(.active) &, [data-control="groupbar"] a:not(.active) &
+      background-color: lighten(COLOR, 20%)
 
 
 /* =================================  PULL  =============================== */
 body > section > [data-control="pull"]
   background-color: darken(BACKGROUND, 15%)
   color: darken(BACKGROUND, 50%)
-  text-shadow: 0 1px 1px BACKGROUND
+  text-shadow: 0 0.1em 1em BACKGROUND
   & > strong
     font-weight: 700
   &.rotate
