--- a/src/stylesheets/__init.styl
+++ b/src/stylesheets/__init.styl
@@ -28,3 +28,5 @@ FORM_HEIGHT             = 30px
 FORM_border             = 2px
 FORM_border_height      = FORM_HEIGHT + (FORM_border * 4)
 FORM_PROGRESS_HEIGHT    = 12px
+
+BUTTON_HEIGHT           = 34px
