--- a/src/stylesheets/theme/theme.widget.form.styl
+++ b/src/stylesheets/theme/theme.widget.form.styl
@@ -31,7 +31,8 @@ form, .form
     color: rgba(0, 0, 0, 0.75)
     &.border
       border: FORM_border solid FORM_color
-      border-radius: FORM_border_radius
+      // border-radius: FORM_border_radius
+      border-radius: 0.2em
     &.error, &:required
       color: DANGER !important
       border-color: DANGER !important
