Fix sizes in data-control=menu

--- a/src/stylesheets/lungo.layout.nav.styl
+++ b/src/stylesheets/lungo.layout.nav.styl
@@ -73,7 +73,7 @@ nav
   /* ========================================================================= */
   &[data-control=menu]
     position: absolute
-    left:0
+    left: 0
     top: HEADER_HEIGHT
     visibility: hidden
     z-index: 2
@@ -110,7 +110,9 @@ nav
         & > .icon
           position: absolute
           left: 0.5em
-          font-size: 1.5em
+          top: 0.5em
+          font-size: FONT_SIZE_LARGE
+          line-height: 1.0em
 
   /* ========================================================================= */
   /* ================================ FOOTER ================================= */
